hphp/test/quick/priv1.php.expectf
C1::foo
C2::foo
C3::foo
B4::foo

Fatal error: Call to private method A5::__construct from context B5 in %s on line 89
